Doc/force-app/main/default/objects/Product2/fields/AM_Solution__c.field-meta.xml
<CustomField>
    <fullName>AM_Solution__c</fullName>
    <formula>TEXT(Product_LineNew__r.Simple_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Solution</label>
    <type>Text</type>
</CustomField>