Doc/force-app/main/default/objects/Product2/fields/Attorneys_Up_to__c.field-meta.xml
<CustomField>
    <fullName>Attorneys_Up_to__c</fullName>
    <description>Indicates for what number of attorneys this product is valid.</description>
    <label>Attorneys (Up to)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>83</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>133</fullName>
            </value>
            <value>
                <fullName>167</fullName>
            </value>
            <value>
                <fullName>233</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1600</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2200</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>2700</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>3500</fullName>
            </value>
            <value>
                <fullName>4000</fullName>
            </value>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>5000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>