Doc/force-app/main/default/objects/Product2/fields/AVA_SFCPQ__Product_Category__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Product_Category__c</fullName>
    <inlineHelpText>This custom field is from the AvaTax for Salesforce CPQ managed package.</inlineHelpText>
    <label>Product Category</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>