Doc/force-app/main/default/objects/Product2/fields/AVA_SFCPQ__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__TaxCode__c</fullName>
    <description>Identifying code from Avalara that indicates it belongs to a certain product taxability.</description>
    <inlineHelpText>Identifying code from Avalara that indicates it belongs to a certain product taxability.</inlineHelpText>
    <label>Avalara Tax Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>