Doc/force-app/main/default/objects/Product2/fields/Bundle_product__c.field-meta.xml
<CustomField>
    <fullName>Bundle_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle product</label>
    <type>Checkbox</type>
</CustomField>