Doc/force-app/main/default/objects/Product2/fields/Business_Unit_New__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_New__c</fullName>
    <formula>Text(  Product_LineNew__r.Practice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>