Doc/force-app/main/default/objects/Product2/fields/Child_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Child_Product_Description__c</fullName>
    <description>Created to have Child Product Names of Static Bundle Products</description>
    <label>Child Product Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>