Doc/force-app/main/default/objects/Product2/fields/Cloud_Addendum_Required__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Addendum_Required__c</fullName>
    <formula>Product_LineNew__r.Cloud_Addendum_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Addendum Required</label>
    <type>Checkbox</type>
</CustomField>