Doc/force-app/main/default/objects/Product2/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Number of days required to complete service</description>
    <label>Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>