Doc/force-app/main/default/objects/Product2/fields/DefaultNumberDatasources__c.field-meta.xml
<CustomField>
    <fullName>DefaultNumberDatasources__c</fullName>
    <label>Default Number of Datasources</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>