Doc/force-app/main/default/objects/Product2/fields/Deferred_Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Revenue_Account__c</fullName>
    <description>Deferred Revenue Account from Item Master Product Object.</description>
    <formula>TEXT( Item_Master_Product__r.Deferred_Revenue_Account__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferred Revenue Account</label>
    <type>Text</type>
</CustomField>