Doc/force-app/main/default/objects/Product2/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <description>This field contains all the Deployment Types from the Product Lines. Created as part of BIZ-67837</description>
    <formula>TEXT(Product_LineNew__r.Deployment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment</label>
    <type>Text</type>
</CustomField>