Doc/force-app/main/default/objects/Product2/fields/DTE_Legacy_Product_Information__c.field-meta.xml
<CustomField>
    <fullName>DTE_Legacy_Product_Information__c</fullName>
    <label>DTE Legacy Product Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time Entry - DTE Legacy</fullName>
            </value>
            <value>
                <fullName>Time Entry - DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Time Entry - RollCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>