Doc/force-app/main/default/objects/Product2/fields/Eligible_For_Premium__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells if a particular product is eligible for premium or not.</description>
    <label>Eligible For Premium</label>
    <type>Checkbox</type>
</CustomField>