Doc/force-app/main/default/objects/Product2/fields/Guided_Selling_Type__c.field-meta.xml
<CustomField>
    <fullName>Guided_Selling_Type__c</fullName>
    <description>BIZ-45084 Guided Selling</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Guided Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>