Doc/force-app/main/default/objects/Product2/fields/Includes_Assist__c.field-meta.xml
<CustomField>
    <fullName>Includes_Assist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track SKU which Includes Assist</description>
    <label>Includes AI</label>
    <type>Checkbox</type>
</CustomField>