Doc/force-app/main/default/objects/Product2/fields/Intapp_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Product_Number__c</fullName>
    <label>OP4I product #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>