Doc/force-app/main/default/objects/Product2/fields/Is_IB_A__c.field-meta.xml
<CustomField>
    <fullName>Is_IB_A__c</fullName>
    <description>For populating IB&amp;A subvertical related products</description>
    <label>Is IB&amp;A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>IB&amp;A</fullName>
                <isActive>false</isActive>
                <label>IB&amp;A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>