Doc/force-app/main/default/objects/Product2/fields/Is_Legal__c.field-meta.xml
<CustomField>
    <fullName>Is_Legal__c</fullName>
    <description>For populating legal subvertical related products</description>
    <label>Is Legal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>