Doc/force-app/main/default/objects/Product2/fields/Is_PCM__c.field-meta.xml
<CustomField>
    <fullName>Is_PCM__c</fullName>
    <description>For populating PCM subvertical related products</description>
    <label>Is PCM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>PCM</fullName>
                <isActive>false</isActive>
                <label>PCM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>