Doc/force-app/main/default/objects/Product2/fields/Is_Real_Assets__c.field-meta.xml
<CustomField>
    <fullName>Is_Real_Assets__c</fullName>
    <description>For populating Real Assets subvertical related products</description>
    <label>Is Real Assets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Real Assets</fullName>
                <isActive>false</isActive>
                <label>Real Assets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>