Doc/force-app/main/default/objects/Product2/fields/Is_Select_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Select_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag created for identifying Select Bundle</description>
    <label>Is Select Bundle</label>
    <type>Checkbox</type>
</CustomField>