Doc/force-app/main/default/objects/Product2/fields/Iss_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Iss_Corporate__c</fullName>
    <description>For populating Corporate subvertical related products</description>
    <label>Is Corporate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>