Doc/force-app/main/default/objects/Product2/fields/Item_Master_Product__c.field-meta.xml
<CustomField>
    <fullName>Item_Master_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Master Product</label>
    <referenceTo>Item_Master_Product__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>