Doc/force-app/main/default/objects/Product2/fields/Item_Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Revenue_Category__c</fullName>
    <description>Item Revenue Category from Item Master Product Object.</description>
    <formula>TEXT(Item_Master_Product__r.Item_Revenue_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Revenue Category</label>
    <type>Text</type>
</CustomField>