Doc/force-app/main/default/objects/Product2/fields/List_Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>List_Price_EUR__c</fullName>
    <label>List Price (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>