Doc/force-app/main/default/objects/Product2/fields/List_Price_USD_Canada__c.field-meta.xml
<CustomField>
    <fullName>List_Price_USD_Canada__c</fullName>
    <label>List Price (USD Canada)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>