Doc/force-app/main/default/objects/Product2/fields/NetSuite_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Billing_Schedule__c</fullName>
    <formula>TEXT(Item_Master_Product__r.NetSuite_Billing_Schedule__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Billing Schedule</label>
    <type>Text</type>
</CustomField>