Doc/force-app/main/default/objects/Product2/fields/NetSuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Internal_ID__c</fullName>
    <description>NetSuite Internal ID from Item Master Product Object.</description>
    <formula>Item_Master_Product__r.NetSuite_Internal_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Internal ID</label>
    <type>Text</type>
</CustomField>