Doc/force-app/main/default/objects/Product2/fields/NS_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Error__c</fullName>
    <description>NS Error from Item Master Product Object.</description>
    <formula>Item_Master_Product__r.NS_Error__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NS Error</label>
    <type>Text</type>
</CustomField>