Doc/force-app/main/default/objects/Product2/fields/Parent_Of_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Parent_Of_Bundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator field for Parent Static and Select bundle, created as per BIZ-48496</description>
    <label>Parent Of Bundle</label>
    <type>Checkbox</type>
</CustomField>