Doc/force-app/main/default/objects/Product2/fields/Percentage_of_ACV__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_ACV__c</fullName>
    <description>BIZ-63586</description>
    <label>Percentage of ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>