Doc/force-app/main/default/objects/Product2/fields/Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Basis__c</fullName>
    <description>BIZ-61584</description>
    <label>Pricing Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier based</fullName>
            </value>
            <value>
                <fullName>Quantity based</fullName>
            </value>
            <value>
                <fullName>% of ACV</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Other/Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>