Doc/force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Picklist to classify products into product groups for product selection screen.</description>
    <inlineHelpText>Picklist to classify products into product groups for product selection screen.</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solutions &amp; Bundles</fullName>
            </value>
            <value>
                <fullName>License Subscription</fullName>
                <label>License Subscriptions</label>
            </value>
            <value>
                <fullName>Content Subscriptions</fullName>
            </value>
            <value>
                <fullName>OnePlace Solutions</fullName>
            </value>
            <value>
                <fullName>Intapp Platform</fullName>
            </value>
            <value>
                <fullName>Intapp Products</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
            <value>
                <fullName>Third Party Data</fullName>
            </value>
            <value>
                <fullName>Extra sandboxes</fullName>
            </value>
            <value>
                <fullName>External Collaboration for Risk</fullName>
            </value>
            <value>
                <fullName>Premium Support SKUs</fullName>
            </value>
            <value>
                <fullName>Legacy OnePlace licenses</fullName>
            </value>
            <value>
                <fullName>Ops Only - Do Not Use</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Subscription Credit</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Partner Practicums</fullName>
            </value>
            <value>
                <fullName>Connect Tickets</fullName>
                <isActive>false</isActive>
                <label>Connect Tickets</label>
            </value>
            <value>
                <fullName>Credits</fullName>
                <isActive>false</isActive>
                <label>One Time Credits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>