Doc/force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line - EXPIRING 4/28</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms</fullName>
            </value>
            <value>
                <fullName>Intapp Time - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Multiple Products</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing - Cloud</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>